# CTkToDoApp

./: .gitignore  README.md  app.py  app.spec  build.py  pyproject.toml  requirements.txt
core/: settings.py
core/ui/components/: component_sidebar_button.py  ctknavbar.py  navbar.py  task_unit.py
core/utils/: storage.py  todo.py
ctktodoapp/: __init__.py  ctk_todo_app.py  settings.py  storage.json
ctktodoapp/ui/: add_task_frame.py  setting_frame.py  task_component.py  todo_frame.py
ctktodoapp/utils/: storage.py
